<resources>
    <string name="app_name">PhoneBook</string>
    <string name="person">Person</string>
    <string name="add">Add</string>
    <string name="save">save</string>
    <string name="edit">Edit</string>
    <string name="call">call</string>
    <string name="message">message</string>
    <string name="mail">mail</string>
    <string name="mobile_number_demo">011 234 5678</string>
    <string name="mobile">mobile</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="delete_contact_card">Delete Contact Card</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard_changes_question">Are you sure you want to discard yout changes?</string>
    <string name="discard_changes">Discard Changes</string>
</resources>
