<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContact">
    <androidx.cardview.widget.CardView
        android:id="@+id/contact_info_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_contact_personImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_480px"
                app:civ_border_width="1dp"
                app:civ_border_color="#81817E" />
            <TextView
                android:id="@+id/edit_contact_editPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edit_contact_personImage"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/edit"
                android:textColor="#2339C6"
                android:textSize="14sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/contact_info_lower"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/contact_info_upper"
        android:orientation="vertical"
        android:background="#8CCACABC">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:background="#fff"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edit_contact_personName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#fff"
            android:text="@string/person"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:nextFocusDown="@id/edit_contact_personMobile"
            android:inputType="textPersonName" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="#fff"
            android:text="@string/mobile"
            android:textSize="14sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edit_contact_personMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#fff"
            android:text="@string/mobile_number_demo"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:nextFocusDown="@id/edit_contact_personEmail"
            android:inputType="phone" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="#fff"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edit_contact_personEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#fff"
            android:text="demo_email.gmail.com"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />
        <TextView
            android:id="@+id/edt_contact_deleteContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#fff"
            android:text="@string/delete_contact"
            android:textColor="#E42222"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>