<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfo">

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_info_upper"
        android:layout_width="match_parent"
        android:layout_height="230dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_info_personImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_480px"
                app:civ_border_width="1dp"
                app:civ_border_color="#81817E" />
            <TextView
                android:id="@+id/contact_info_personName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/contact_info_personImage"
                android:layout_marginTop="5dp"
                android:text="@string/person"
                android:textColor="#000"
                android:fontFamily="@font/quicksand_bold"
                android:textSize="25sp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginBottom="15dp">
                <androidx.cardview.widget.CardView
                    android:id="@+id/message_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    android:layout_marginEnd="25dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/contact_info_messagePerson"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/messaging_50px"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="#0D25C1"
                        android:textSize="11sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/message"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/call_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/message_area"
                    android:layout_marginEnd="25dp"
                    app:cardElevation="0dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/contact_info_callPerson"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/phone_50px"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="#0D25C1"
                        android:textSize="11sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/call"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/mail_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/call_area"
                    app:cardElevation="0dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/contact_info_mailPerson"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/secured_letter_50px"
                        android:layout_gravity="center_horizontal"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="#0D25C1"
                        android:textSize="11sp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mail"/>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/contact_info_lower"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/contact_info_upper"
        android:layout_marginStart="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mobile"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/contact_info_personMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number_demo"
            android:textColor="#2339C6"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/contact_info_personEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="demo_email.gmail.com"
            android:textColor="#2339C6"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>