<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContact">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/showimg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/user_480px"/>
    <ImageView
        android:id="@+id/imgadd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/showimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:src="@drawable/add_50px" />
    <TextView
        android:id="@+id/txtviewname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgadd"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_bold" />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtviewname"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textfield_bg"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/txtviewmobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:text="@string/mobile"
        android:fontFamily="@font/quicksand_bold" />
    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtviewmobile"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textfield_bg"
        android:inputType="number|phone" />
    <TextView
        android:id="@+id/txtviewemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:fontFamily="@font/quicksand_bold" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtviewemail"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textfield_bg"
        android:inputType="textEmailAddress" />

</RelativeLayout>