<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    android:paddingBottom="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <androidx.cardview.widget.CardView
            android:id="@+id/popup_discard_changes_upper_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            android:elevation="0dp"
            android:background="@drawable/popup_upper_bg">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/popup_discard_changes_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/discard_changes_question"
                    android:textSize="12sp"
                    android:textAlignment="center"/>
                <View
                    android:id="@+id/popup_discard_changes_upper_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/popup_discard_changes_title"
                    android:background="@drawable/divider"/>
                <TextView
                    android:id="@+id/popup_discard_changes_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/popup_discard_changes_upper_divider"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/discard_changes"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#E42222"
                    android:clickable="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_discard_changes_upper_area"
            app:cardCornerRadius="12dp"
            android:elevation="0dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/popup_upper_bg">
            <TextView
                android:id="@+id/popup_keep_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popup_upper_divider"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/keep_editing"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#2339C6"
                android:clickable="true"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
